# bgql

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bindings/go/: bgql.go  go.mod
bindings/go/bgql/: bgql.go  go.mod
bindings/go/bgql/client/: client.go
bindings/go/bgql/result/: result.go
bindings/go/bgql/server/: server.go
crates/bgql_cli/: Cargo.toml
crates/bgql_cli/src/: lib.rs  main.rs
crates/bgql_codegen/: Cargo.toml
crates/bgql_codegen/src/: go.rs  lib.rs  rust.rs  typescript.rs
crates/bgql_core/: Cargo.toml
crates/bgql_core/src/: arena.rs  diagnostics.rs  lib.rs  span.rs  text.rs
crates/bgql_lsp/: Cargo.toml
crates/bgql_lsp/src/: completion.rs  hover.rs  lib.rs  state.rs  symbols.rs
crates/bgql_macros/: Cargo.toml
crates/bgql_macros/src/: lib.rs
crates/bgql_resolver/: Cargo.toml
crates/bgql_resolver/src/: lib.rs  module_system.rs
crates/bgql_runtime/: Cargo.toml
crates/bgql_runtime/src/: binary_transport.rs  dataloader.rs  directives.rs  executor.rs  hls.rs  lib.rs  query.rs  resolver.rs  resource.rs  scheduler.rs  schema.rs  state.rs  streaming.rs
crates/bgql_runtime/tests/: streaming_integration.rs
crates/bgql_sdk/: Cargo.toml
crates/bgql_sdk/src/: client.rs  lib.rs  result.rs  server.rs
crates/bgql_sdk/tests/: integration_test.rs
crates/bgql_semantic/: Cargo.toml
crates/bgql_semantic/src/: checker.rs  hir.rs  lib.rs  types.rs
crates/bgql_syntax/: Cargo.toml
crates/bgql_syntax/src/: ast.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/bgql_wasm/: Cargo.toml
crates/bgql_wasm/src/: lib.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api/: client.md  overview.md  server.md
docs/backend/: authentication.md  context.md  dataloader.md  errors.md  performance.md  production.md  quickstart.md  resolvers.md  streaming.md  subscriptions.md  testing.md
docs/cli/: codegen.md  commands.md  overview.md
docs/frontend/: caching.md  errors.md  mutations.md  queries.md  quickstart.md  react.md  streaming.md  subscriptions.md  svelte.md  type-safety.md  vue.md
docs/guide/: error-handling.md  getting-started.md  installation.md  modules.md  type-system.md  why-bgql.md
docs/schema/: directives.md  enums-unions.md  generics.md  inputs.md  interfaces.md  opaque-types.md  streaming.md  types.md
editors/zed/: extension.toml
editors/zed/languages/bgql/: config.toml  highlights.scm  indents.scm  outline.scm
examples/: mutations.bgql  queries.bgql  schema.bgql
examples/rust-server/: Cargo.toml  README.md  schema.bgql
examples/rust-server/schema/common/: errors.bgql  mod.bgql  pagination.bgql  scalars.bgql
examples/rust-server/src/: db.rs  generated.rs  main.rs
examples/rust-server/src/application/: mod.rs  services.rs
examples/rust-server/src/domain/: entities.rs  errors.rs  mod.rs
examples/rust-server/src/infrastructure/: mod.rs  repositories.rs
examples/rust-server/src/presentation/: mod.rs  resolvers.rs
examples/ts-client/: README.md  package.json
examples/ts-client/src/: client.ts  main.ts  types.ts
examples/ts-server/: README.md  package.json  tsconfig.json  tsdown.config.ts
examples/ts-server/schema/: errors.bgql  inputs.bgql  mod.bgql  mutations.bgql  queries.bgql  types.bgql
examples/ts-server/src/: server.ts
examples/ts-server/src/application/: index.ts  post-use-cases.ts  user-use-cases.ts
examples/ts-server/src/domain/: entities.ts  errors.ts  index.ts
examples/ts-server/src/infrastructure/: index.ts  loaders.ts  repositories.ts
examples/ts-server/src/macros/: schema.ts
examples/ts-server/src/presentation/: context.ts  index.ts  resolvers.ts
examples/vue-streaming/: index.html  package.json  tsconfig.json  vite.config.ts
examples/vue-streaming/src/: App.vue  BinaryStreamExample.vue  main.ts
npm/client/: bun.lockb  package.json  tsconfig.json
npm/client/src/: client.ts  errors.ts  index.ts  result.ts  types.ts
npm/client/src/vue/: index.ts  types.ts  useBinaryStream.ts  useMutation.ts  useQuery.ts  useServerFragment.ts  useSubscription.ts  vite-plugin.ts
npm/client/src/vue/components/: BgqlDefer.ts  (+4 more)
npm/server/: bun.lockb  package.json  tsconfig.json
npm/server/src/: context.ts  dataloader.ts  errors.ts  index.ts  playground.ts  resolver.ts  schema.ts  server.ts  types.ts  validation.ts
npm/vue-plugin/: package.json  tsconfig.json  tsdown.config.ts
npm/vue-plugin/src/: composables.ts  index.ts  vite.ts
playground/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
playground/src/: App.vue  main.ts
playground/src/components/: EditorPanel.vue  Header.vue  OutputPanel.vue  StatusBar.vue
playground/src/composables/: useBetterGraphQL.ts
playground/src/styles/: main.scss
sdk/go/: client.go  context.go  error.go  go.mod  resolver.go  result.go
sdk/ruby/: bgql.gemspec
sdk/ruby/lib/: bgql.rb
sdk/ruby/lib/bgql/: client.rb  context.rb  error.rb  result.rb  typed.rb  version.rb
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  context.rs  directives.rs  error.rs  http.rs  lib.rs  pubsub.rs  server.rs  streaming.rs  typed.rs  validation.rs
sdk/rust/tests/: integration_test.rs
sdk/typescript/: package.json  tsconfig.json  tsdown.config.ts
sdk/typescript/src/: client.ts  context.ts  error.ts  gql.ts  index.ts  result.ts  server.ts
spec/: 00-overview.md  01-type-system.md  02-schema-definition.md  03-directives.md  04-query-language.md  05-http-protocol.md  06-execution.md  07-introspection.md  08-client-sdk.md  09-server-sdk-go.md  09-server-sdk-rs.md  09-server-sdk-ts.md
tools/browser/chrome/: devtools.html  manifest.json  panel.html  popup.html  sidebar.html
tools/browser/chrome/icons/: .gitkeep
tools/browser/chrome/src/: background.js  content.js  devtools.js  inject.js  panel.js  popup.js
tools/ide/vscode/: README.md  language-configuration.json  package.json
tools/ide/vscode/src/: extension.ts
tools/ide/vscode/syntaxes/: bgql.tmLanguage.json
tools/ide/zed/: README.md  extension.toml
(+3 files in other folders)
