[workspace]
resolver = "2"
members = [
    "crates/bgql_core",
    "crates/bgql_syntax",
    "crates/bgql_semantic",
    "crates/bgql_resolver",
    "crates/bgql_runtime",
    "crates/bgql_macros",
    "crates/bgql_codegen",
    "crates/bgql_lsp",
    "crates/bgql_wasm",
    "crates/bgql_cli",
    "sdk/rust",
    "examples/rust-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ubugeeei"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubugeeei/bgql"
keywords = ["graphql", "parser", "schema", "api"]
categories = ["parsing", "web-programming"]

[workspace.dependencies]
# Core dependencies
bumpalo = { version = "3.16", features = ["collections", "boxed"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "2.0"
memchr = "2.7"
rustc-hash = "2.0"
indexmap = { version = "2.2", features = ["serde"] }

# Parallelism
rayon = "1.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# LSP
tower-lsp = "0.20"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAssembly
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Testing
insta = { version = "1.39", features = ["yaml"] }
criterion = { version = "0.5", features = ["html_reports"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
bgql_core = { path = "crates/bgql_core" }
bgql_syntax = { path = "crates/bgql_syntax" }
bgql_semantic = { path = "crates/bgql_semantic" }
bgql_resolver = { path = "crates/bgql_resolver" }
bgql_runtime = { path = "crates/bgql_runtime" }
bgql_sdk = { path = "sdk/rust" }
bgql_lsp = { path = "crates/bgql_lsp" }
bgql_wasm = { path = "crates/bgql_wasm" }
bgql_cli = { path = "crates/bgql_cli" }
bgql_macros = { path = "crates/bgql_macros" }
bgql_codegen = { path = "crates/bgql_codegen" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[profile.bench]
debug = true
