[package]
name = "bgql_runtime"
description = "Runtime for Better GraphQL (schema, execution, codegen)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bgql_core.workspace = true
bgql_syntax.workspace = true
bgql_semantic.workspace = true
bgql_resolver.workspace = true
tokio.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true

[dev-dependencies]

[features]
default = []
