[package]
name = "bgql_wasm"
description = "WebAssembly bindings for Better GraphQL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bgql_core.workspace = true
bgql_syntax.workspace = true
bgql_semantic.workspace = true
bgql_resolver.workspace = true
# NOTE: bgql_runtime is not WASM-compatible (depends on tokio/rayon)
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
