[package]
name = "bgql_sdk"
description = "SDK for Better GraphQL (Rust client/server, TypeScript/Go codegen)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bgql_core.workspace = true
bgql_syntax.workspace = true
bgql_semantic.workspace = true
bgql_resolver.workspace = true
bgql_runtime.workspace = true
bgql_macros.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
regex = "1.10"
bytes = "1.5"
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
tracing.workspace = true

[dev-dependencies]

[features]
default = []
